[package]
authors = ["The Chromium OS Authors"]
edition = "2021"
name = "net_util"
version = "0.1.0"

[dependencies]
epoll = "4.3.3"
getrandom = "0.3.3"
libc = "0.2.167"
log = "0.4.22"
net_gen = { path = "../net_gen" }
rate_limiter = { path = "../rate_limiter" }
serde = { version = "1.0.208", features = ["derive"] }
thiserror = { workspace = true }
virtio-bindings = { workspace = true }
virtio-queue = { workspace = true }
vm-memory = { workspace = true, features = [
  "backend-atomic",
  "backend-bitmap",
  "backend-mmap",
] }
vm-virtio = { path = "../vm-virtio" }
vmm-sys-util = { workspace = true }

[dev-dependencies]
pnet = "0.35.0"
pnet_datalink = "0.35.0"
serde_json = { workspace = true }
