[package]
authors = ["The Cloud Hypervisor Authors"]
edition.workspace = true
name = "offload_daemon"
rust-version.workspace = true
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
vm-memory = { workspace = true, features = ["backend-mmap"] }
vm-migration = { path = "../vm-migration" }
vmm = { path = "../vmm" }
vmm-sys-util = { workspace = true }

[features]
default = ["kvm"]
kvm = ["vmm/kvm"]
mshv = ["vmm/mshv"]

[lints]
workspace = true
