[package]
authors = ["Samuel Ortiz <sameo@linux.intel.com>"]
edition = "2021"
name = "pci"
version = "0.1.0"

[features]
default = []
kvm = ["vfio-ioctls/kvm"]
mshv = ["vfio-ioctls/mshv"]

[dependencies]
anyhow = "1.0.87"
byteorder = "1.5.0"
hypervisor = { path = "../hypervisor" }
libc = "0.2.158"
log = "0.4.22"
serde = { version = "1.0.208", features = ["derive"] }
thiserror = "1.0.62"
vfio-bindings = { git = "https://github.com/rust-vmm/vfio", branch = "main", features = [
  "fam-wrappers",
] }
vfio-ioctls = { git = "https://github.com/rust-vmm/vfio", branch = "main", default-features = false }
vfio_user = { git = "https://github.com/rust-vmm/vfio-user", branch = "main" }
vm-allocator = { path = "../vm-allocator" }
vm-device = { path = "../vm-device" }
vm-memory = { version = "0.15.0", features = [
  "backend-atomic",
  "backend-bitmap",
  "backend-mmap",
] }
vm-migration = { path = "../vm-migration" }
vmm-sys-util = "0.12.1"
