[package]
name = "qcow"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2018"
license = "BSD-3-Clause"

[lib]
path = "src/qcow.rs"

[dependencies]
byteorder = "1.3.2"
libc = "0.2.60"
log = "0.4.8"
remain = "0.1.3"
vmm-sys-util = { git = "https://github.com/rust-vmm/vmm-sys-util" }

[dev-dependencies]
tempfile = "3.1.0"
