[package]
edition.workspace = true
name = "rate_limiter"
rust-version.workspace = true
version = "0.1.0"

[dependencies]
epoll = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
vmm-sys-util = { workspace = true }

[lints]
workspace = true
