[package]
authors = ["The Cloud Hypervisor Authors"]
edition = "2021"
name = "test_infra"
version = "0.1.0"

[dependencies]
dirs = "6.0.0"
epoll = "4.3.3"
libc = "0.2.167"
once_cell = "1.20.2"
serde = { version = "1.0.208", features = ["derive", "rc"] }
serde_json = { workspace = true }
ssh2 = { version = "0.9.4", features = ["vendored-openssl"] }
thiserror = "2.0.6"
vmm-sys-util = { workspace = true }
wait-timeout = "0.2.0"
