[package]
authors = ["The Cloud Hypervisor Authors"]
edition.workspace = true
name = "test_infra"
version = "0.1.0"

[dependencies]
dirs = { workspace = true }
epoll = { workspace = true }
libc = { workspace = true }
rand = "0.9.2"
serde_json = { workspace = true }
ssh2 = { version = "0.9.5", features = ["vendored-openssl"] }
thiserror = { workspace = true }
vmm-sys-util = { workspace = true }
wait-timeout = { workspace = true }
