[package]
authors = ["Microsoft Authors"]
edition = "2021"
license = "Apache-2.0"
name = "tpm"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
net_gen = { path = "../net_gen" }
thiserror = { workspace = true }
vmm-sys-util = { workspace = true }
