[package]
name = "vfio-ioctls"
version = "0.0.1"
authors = ["The Cloud Hypervisor Authors"]

[dependencies]
arc-swap = ">=0.4.4"
byteorder = "1.3.4"
kvm-bindings = { git = "https://github.com/cloud-hypervisor/kvm-bindings", branch = "ch" }
kvm-ioctls = { git = "https://github.com/cloud-hypervisor/kvm-ioctls", branch = "ch" }
libc = "0.2.71"
log = "0.4.8"
vm-device = { path = "../vm-device" }
vm-memory = { version = "0.2.1", features = ["backend-mmap"] }
vmm-sys-util = ">=0.3.1"

[dependencies.vfio-bindings]
git = "https://github.com/rust-vmm/vfio-bindings"
features = ["fam-wrappers"]
