[package]
name = "vfio"
version = "0.0.1"
authors = ["The Cloud Hypervisor Authors"]

[dependencies]
arc-swap = ">=0.4.4"
byteorder = "1.3.2"
devices = { path = "../devices" }
kvm-bindings = "0.2.0"
kvm-ioctls = "0.5.0"
libc = "0.2.60"
log = "0.4.8"
pci = { path = "../pci" }
vfio-bindings = "0.1.0"
vm-allocator = { path = "../vm-allocator" }
vm-device = { path = "../vm-device" }
vmm-sys-util = ">=0.3.1"

[dependencies.vm-memory]
git = "https://github.com/rust-vmm/vm-memory"
features = ["backend-mmap"]
