[package]
name = "vfio_user"
version = "0.1.0"
authors = ["The Cloud Hypervisor Authors"]
edition = "2021"

[dependencies]
libc = "0.2.138"
log = "0.4.17"
serde = { version = "1.0.149", features = ["rc"] }
serde_derive = "1.0.149"
serde_json = "1.0.89"
thiserror = "1.0.37"
vfio-bindings = { git = "https://github.com/rust-vmm/vfio", branch = "main", features = ["fam-wrappers"] }
vm-memory = { version = "0.10.0", features = ["backend-mmap", "backend-atomic"] }
vmm-sys-util = "0.11.0"