[package]
name = "vhdx"
version = "0.1.0"
authors = ["The Cloud Hypervisor Authors"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
byteorder = "1.4.3"
crc32c = "0.6.0"
libc = "0.2.101"
log = "0.4.14"
remain = "0.2.2"
thiserror = "1.0"
uuid = { version = "0.8.2", features = ["v4"] }
vmm-sys-util = ">=0.3.1"