[package]
name = "vhdx"
version = "0.1.0"
authors = ["The Cloud Hypervisor Authors"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
byteorder = "1.4.3"
crc32c = "0.6.3"
libc = "0.2.124"
log = "0.4.16"
remain = "0.2.3"
thiserror = "1.0"
uuid = { version = "1.0.0", features = ["v4"] }
vmm-sys-util = ">=0.3.1"