[package]
name = "vhost_rs"
version = "0.1.0"
authors = ["Liu Jiang <gerry@linux.alibaba.com>"]
repository = "https://github.com/rust-vmm/vhost"
license = "Apache-2.0 or BSD-3-Clause"

[features]
default = []
vhost-vsock = []
vhost-kern = ["vm-memory"]
vhost-user-master = []
vhost-user-slave = []

[dependencies]
bitflags = ">=1.0.1"
libc = ">=0.2.39"
vmm-sys-util = { git = "https://github.com/rust-vmm/vmm-sys-util" }

[dependencies.vm-memory]
git = "https://github.com/rust-vmm/vm-memory"
optional = true

[dev-dependencies]
tempfile = "3.0.5"
