[package]
name = "vhost_user_backend"
version = "0.1.0"
authors = ["The Cloud Hypervisor Authors"]
edition = "2018"

[features]
default = []
pci_support = ["vm-virtio/pci_support"]
mmio_support = ["vm-virtio/mmio_support"]

[dependencies]
epoll = ">=4.0.1"
libc = "0.2.66"
log = "0.4.8"
virtio-bindings = "0.1.0"
vm-memory = { git = "https://github.com/rust-vmm/vm-memory" }
vm-virtio = { path = "../vm-virtio" }
vmm-sys-util = ">=0.3.1"

[dependencies.vhost_rs]
path = "../vhost_rs"
features = ["vhost-user-slave"]
