[package]
name = "vhost_user_backend"
version = "0.1.0"
authors = ["The Cloud Hypervisor Authors"]
edition = "2018"

[features]
default = []

[dependencies]
epoll = ">=4.0.1"
libc = "0.2.95"
log = "0.4.14"
virtio-bindings = "0.1.0"
vm-memory = "0.5.0"
vm-virtio = { path = "../vm-virtio" }
vmm-sys-util = ">=0.3.1"
vhost = { git = "https://github.com/rust-vmm/vhost", branch = "master", package = "vhost", features = ["vhost-user-slave"] }
