[package]
name = "vhost_user_backend"
version = "0.1.0"
authors = ["The Cloud Hypervisor Authors"]
edition = "2018"

[features]
default = []

[dependencies]
epoll = "4.3.1"
libc = "0.2.103"
log = "0.4.14"
virtio-bindings = "0.1.0"
vm-memory = { version = "0.6.0", features = ["backend-bitmap"] }
vm-virtio = { path = "../vm-virtio" }
vmm-sys-util = "0.9.0"
vhost = { version = "0.1.0", features = ["vhost-user-slave"] }
