[package]
authors = ["The Cloud Hypervisor Authors"]
build = "../build.rs"
edition = "2021"
name = "vhost_user_block"
version = "0.1.0"

[dependencies]
block = { path = "../block" }
clap = { version = "4.5.13", features = ["cargo", "wrap_help"] }
env_logger = { workspace = true }
libc = "0.2.167"
log = "0.4.22"
option_parser = { path = "../option_parser" }
thiserror = { workspace = true }
vhost = { workspace = true, features = ["vhost-user-backend"] }
vhost-user-backend = { workspace = true }
virtio-bindings = { workspace = true }
virtio-queue = { workspace = true }
vm-memory = { workspace = true }
vmm-sys-util = { workspace = true }
