[package]
name = "vhost_user_fs"
version = "0.1.0"
authors = ["The Cloud Hypervisor Authors"]
edition = "2018"

[dependencies]
bitflags = "1.1.0"
clap = { version = "2.33.2", features=["wrap_help"] }
epoll = ">=4.0.1"
futures = { version = "0.3.5", features = ["thread-pool"] }
libc = "0.2.74"
log = "0.4.11"
# Match the version in vmm
seccomp = { git = "https://github.com/firecracker-microvm/firecracker", tag = "v0.22.0" }
tempdir = "0.3.7"
virtio-bindings = { version = "0.1", features = ["virtio-v5_0_0"]}
virtio-devices = { path = "../virtio-devices" }
vhost_rs = { git = "https://github.com/cloud-hypervisor/vhost", branch = "dragonball", package = "vhost", features = ["vhost-user-slave"] }
vhost_user_backend = { path = "../vhost_user_backend"}
vm-memory = "0.2.1"
vm-virtio = { path = "../vm-virtio" }
vmm-sys-util = "0.6.1"